RESOLVED FIXED 207554
AX: Wrong includes for internal SDK
https://bugs.webkit.org/show_bug.cgi?id=207554
Summary AX: Wrong includes for internal SDK
chris fleizach
Reported 2020-02-11 08:58:06 PST
Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.15.Internal.sdk/System/Library/Frameworks/ApplicationServices.framework/Frameworks/HIServices.framework/PrivateHeaders/AccessibilityPriv.h:321:26: note: previous definition is here typedef CF_ENUM(int32_t, AXClientType) 1 error generated. <rdar://problem/59341578>
Attachments
patch (1.24 KB, patch)
2020-02-11 09:51 PST, chris fleizach
no flags
patch (1.24 KB, patch)
2020-02-11 10:16 PST, chris fleizach
no flags
patch (1.21 KB, patch)
2020-02-11 10:17 PST, chris fleizach
no flags
chris fleizach
Comment 1 2020-02-11 09:51:55 PST
chris fleizach
Comment 2 2020-02-11 10:16:32 PST
chris fleizach
Comment 3 2020-02-11 10:17:46 PST
WebKit Commit Bot
Comment 4 2020-02-11 10:57:50 PST
The commit-queue encountered the following flaky tests while processing attachment 390384 [details]: editing/spelling/spellcheck-attribute.html bug 206178 (authors: g.czajkowski@samsung.com, mark.lam@apple.com, and rniwa@webkit.org) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 5 2020-02-11 10:58:24 PST
Comment on attachment 390384 [details] patch Clearing flags on attachment: 390384 Committed r256320: <https://trac.webkit.org/changeset/256320>
WebKit Commit Bot
Comment 6 2020-02-11 10:58:26 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.