AX: Wrong includes for internal SDK https://bugs.webkit.org/show_bug.cgi?id=207554

Reviewed by Chris Dumez.

* pal/spi/mac/HIServicesSPI.h:


Canonical link: https://commits.webkit.org/220538@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256320 268f45cc-cd09-0410-ab3c-d52691b4dbfc