Source/WebCore/PAL/pal/spi/mac/HIServicesSPI.h
@@ -102,8 +102,6 @@ enum {
     kMSHDoNotCreateSendRightOption = 0x4,
 };
 
-#endif
-
 typedef UInt32 MSHCreateOptions;
 typedef const struct __AXTextMarker* AXTextMarkerRef;
 typedef const struct __AXTextMarkerRange* AXTextMarkerRangeRef;
@@ -149,3 +147,5 @@ AXClientType _AXGetClientForCurrentRequestUntrusted(void);
 #endif // HAVE(AX_CLIENT_TYPE)
 
 WTF_EXTERN_C_END
+
+#endif // USE(APPLE_INTERNAL_SDK)
